# FIFO-Inventory-Valuation

./: .FIFO.code-workspace  .bandit.yaml  .bumpversion.cfg  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  CHANGELOG.md  README.md  notes.md  project.code-workspace  pyproject.toml  script.py
fifo/: __init__.py  __main__.py
fixtures/: salaries.csv
src/: README.md
src/fifo/: __init__.py  __main__.py
src/fifo/mappings/: data.json
