[tool.poetry]
authors = ["sandmanscanga <59103444+sandmanscanga@users.noreply.github.com>"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Typing :: Typed"
]
description = "A package for calculating inventory valuation, based on FIFO (first in first out)."
homepage = "https://github.com/sandmanscanga/FIFO-Inventory-Valuation/blob/master/README.md"
keywords = ["app", "fifo", "inventory", "project", "python", "valuation"]
license = "MIT"
name = "fifo"
packages = [{ include = "fifo", from = "." }]
readme = "README.md"
repository = "https://github.com/sandmanscanga/FIFO-Inventory-Valuation"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
bandit = "*"
black = "*"
blacken-docs = "*"
bumpversion = "*"
colorama = "*"
colorlog = "*"
gitpython = "*"
ipdb = "*"
ipython = "*"
isort = "*"
mypy = "*"
notebook = "*"
pre-commit = "*"
psutil = "*"
pydantic = "*"
pylint = "*"
python-dotenv = "*"
rich = "*"

[tool.poetry.group.tests.dependencies]
coverage = "*"
pygments-pytest = "*"
pytest = "*"
pytest-benchmark = "*"
pytest-cov = "*"
pytest-emoji = "*"
pytest-logdog = "*"
pytest-menu = "*"
pytest-mock = "*"
pytest-pretty = "*"
pytest-sorter = "*"
pytest-threadleak = "*"

[tool.poetry.group.docs.dependencies]
doc-utils = "*"
meta-sphinx = "*"
mkdocs = "*"
mkdocs-material = "*"
mkdocstrings = "*"
mkdocstrings-python = "*"
pdoc3 = "*"
pydocstyle = "*"
sphinx = "*"
sphinx-autodoc-annotation = "*"
sphinx-autodoc-typehints = "*"
sphinx-multi-theme = "*"
sphinx-rtd-theme = "*"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
